:lipstick: fix excessive contrast

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   display: flex;
-  background-color: #191919;
+  background-color: #202020;
   align-items: center;
   justify-content: space-between;
   padding-left: 4%;
