--- a/src/global.css
+++ b/src/global.css
@@ -17,15 +17,15 @@
 
 body {
   margin: 0;
-  background: #111;
+  background: #181818;
   min-height: 100vh;
   font-family: 'Inter', sans-serif;
   color: white;
 }
 
 .App {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
 }
 
